--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   </div> 
 
   <div class="button-group">
-    <button>GitHub</button>
-    <button>Frontend Mentor</button>
-    <button>LinkedIn</button>
-    <button>Twitter</button>
-    <button>Instagram</button>
+    <a href="https://github.com/">GitHub</a>
+    <a href="https://www.frontendmentor.io/">Frontend Mentor</a>
+    <a href="https://www.linkedin.com/">LinkedIn</a>
+    <a href="https://x.com/">Twitter</a>
+    <a href="https://www.instagram.com/">Instagram</a>
     
   </div>
   
